fix overflow & scrollbar issue on Request Form Association modal

--- a/resources/assets/scss/partials/_form-associations.scss
+++ b/resources/assets/scss/partials/_form-associations.scss
@@ -3,7 +3,7 @@
   font-family: $ubuntu;
   min-height: 100vh;
   
-  .oflow {
+  .overflow-yes {
 	overflow: visible !important;
   }
 }
